<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
>


    <data>
        <variable
                name="mCurentCourse"
                type="Integer" />

    </data>


<androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/colorTextMain"
        android:layout_width="match_parent"
              android:layout_height="match_parent">


    <TextView
            android:text="@string/course17"
            style="@style/text96colorWhite"
            android:textColor="@{mCurentCourse==3 ? @color/colorOrange : @android:color/white}"
            android:elevation="16dp"
            android:layout_width="wrap_content"
            android:layout_height="125dp"
            android:id="@+id/textView16card3" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:typeface="normal"
            app:layout_constraintBottom_toBottomOf="@+id/card3Cours"
            app:layout_constraintTop_toTopOf="@+id/card3Cours" android:layout_marginBottom="60dp"/>
    <TextView
            android:text="@string/course11"
            android:textColor="@{mCurentCourse==3 ? @color/colorOrange : @android:color/white}"
            style="@style/text14colorWhite"
            android:elevation="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView17card3" app:layout_constraintStart_toStartOf="@+id/textView16card3"
            app:layout_constraintEnd_toEndOf="@+id/textView16card3"
            android:layout_marginBottom="12dp" app:layout_constraintBottom_toBottomOf="@+id/card3Cours"
            android:fontFamily="@font/roboto"/>

    <TextView
            android:text="@string/course14"
            android:textColor="@{mCurentCourse==2 ? @color/colorOrange : @android:color/white}"
            style="@style/text96colorWhite"
            android:elevation="16dp"
            android:layout_width="wrap_content"
            android:layout_height="117dp"
            android:id="@+id/textView16card2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="60dp" app:layout_constraintBottom_toTopOf="@+id/card3Cours"
            app:layout_constraintTop_toTopOf="@+id/card2Cours"/>
    <TextView
            android:text="@string/course11"
            android:textColor="@{mCurentCourse==2 ? @color/colorOrange : @android:color/white}"
            style="@style/text14colorWhite"
            android:elevation="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView17card2" app:layout_constraintStart_toStartOf="@+id/textView16card2"
            app:layout_constraintEnd_toEndOf="@+id/textView16card2"
            android:layout_marginBottom="12dp" app:layout_constraintBottom_toBottomOf="@+id/card2Cours"
            android:fontFamily="@font/roboto"/>
    <TextView
            android:text="@string/course13"
            android:textColor="@{mCurentCourse==1 ? @color/colorOrange : @android:color/white}"
            style="@style/text96colorWhite"
            android:elevation="16dp"
            android:layout_width="109dp"
            android:layout_height="124dp"
            android:id="@+id/textView16" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="60dp" app:layout_constraintBottom_toTopOf="@+id/card2Cours"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"/>
    <TextView
            android:text="@string/course11"
            android:textColor="@{mCurentCourse==1 ? @color/colorOrange : @android:color/white}"
            android:elevation="16dp"
            style="@style/text14colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/textView17" app:layout_constraintStart_toStartOf="@+id/textView16"
            app:layout_constraintEnd_toEndOf="@+id/textView16"
            android:fontFamily="@font/roboto" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/card2Cours"/>
    <TextView
            android:text="@string/course7"
            style="@style/text20colorWhiteRalewaiExtrBlood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>
    <TextView
            android:text="@string/course8"
            style="@style/text14colorWhite"
            android:gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView11" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView10"
            android:fontFamily="@font/raleway"/>
    <TextView
            android:text="@string/course9"
            style="@style/text16colorOrange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView13" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView11"
            android:fontFamily="@font/roboto_medium"/>
    <ImageView
            android:layout_width="272dp"
            android:layout_height="2dp" app:srcCompat="@drawable/divider_white"
            android:id="@+id/imageView4" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView13" app:layout_constraintEnd_toEndOf="parent"
    />
    <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" android:id="@+id/card1Cours"
    >
        <androidx.constraintlayout.widget.ConstraintLayout
                android:background="@color/colorTextMain"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:text="@string/course10"
                    android:textColor="@{mCurentCourse==1 ? @color/colorOrange : @android:color/white}"
                    style="@style/text18colorWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView14"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toTopOf="parent" android:fontFamily="@font/roboto"/>
            <TextView

                    android:textColor="@{mCurentCourse==1 ? @color/colorOrange : @android:color/white}"
                    android:text="@string/course12"
                    style="@style/text12colorWhite"
                    android:gravity="right"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView15" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView14" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp" android:fontFamily="@font/roboto_light"/>
            <ImageView
                    android:layout_width="272dp"
                    android:layout_height="2dp" app:srcCompat="@drawable/divider_white"
                    android:id="@+id/imageView23" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView15" android:layout_marginTop="16dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card1Cours" android:id="@+id/card2Cours">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:background="@color/colorTextMain"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:text="@string/course15"
                    android:textColor="@{mCurentCourse==2 ? @color/colorOrange : @android:color/white}"
                    style="@style/text18colorWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView14card2"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toTopOf="parent" android:fontFamily="@font/roboto"/>
            <TextView
                    android:textColor="@{mCurentCourse==2 ? @color/colorOrange : @android:color/white}"
                    android:text="@string/course16"
                    style="@style/text12colorWhite"
                    android:gravity="right"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView15card2" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView14card2" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp" android:fontFamily="@font/roboto_light"/>
            <ImageView
                    android:layout_width="272dp"
                    android:layout_height="2dp" app:srcCompat="@drawable/divider_white"
                    android:id="@+id/imageView23card2" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView15card2" android:layout_marginTop="16dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card2Cours" android:id="@+id/card3Cours">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:background="@color/colorTextMain"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:text="@string/course18"
                    android:textColor="@{mCurentCourse==3 ? @color/colorOrange : @android:color/white}"
                    style="@style/text18colorWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView14card3"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toTopOf="parent" android:fontFamily="@font/roboto"/>
            <TextView
                    android:textColor="@{mCurentCourse==3 ? @color/colorOrange : @android:color/white}"
                    android:text="@string/course19"
                    style="@style/text12colorWhite"
                    android:gravity="right"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView15card3" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView14card3" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp" android:fontFamily="@font/roboto_light"/>
            <ImageView
                    android:layout_width="272dp"
                    android:layout_height="2dp" app:srcCompat="@drawable/divider_white"
                    android:id="@+id/imageView23card3" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView15card3" android:layout_marginTop="10dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_screen_b"
            android:id="@+id/imageView7"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
    />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
