<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
>
    <data>

        <variable
                name="mStatusProg"
                type="Integer" />

    </data>
<androidx.constraintlayout.widget.ConstraintLayout  android:background="@color/colorTextMain"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp" app:srcCompat="@drawable/window_close_white"
            android:id="@+id/imageCLosed" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <TextView
            android:text="@{mStatusProg==2 ? @string/lessonEnd1 : @string/lessonEnd11}"
            style="@style/text24colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="24dp"
            android:fontFamily="@font/raleway_extrabold"/>
    <TextView
            android:text="@string/lessonEnd12"
            android:gravity="right"
            style="@style/text14colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7" android:layout_marginTop="11dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/raleway"/>
    <TextView
            android:text="@string/lessonEnd3"
            style="@style/text18colorLigth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            app:layout_constraintTop_toTopOf="@+id/textView9"
            app:layout_constraintStart_toStartOf="@+id/textViewNumberWordStudy" android:fontFamily="@font/roboto"/>
    <TextView
            android:text="@string/lessonEnd4"
            style="@style/text18colorLigth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView19" android:fontFamily="@font/roboto"/>
    <TextView
            tools:text="10"
            style="@style/text96colorOrange"
            android:layout_width="wrap_content"
            android:layout_height="129dp"
            android:id="@+id/textViewNumberWordStudy"
            app:layout_constraintTop_toTopOf="@+id/textView8"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toStartOf="@+id/textViewTimeStudy" android:fontFamily="@font/raleway_extrabold"/>
    <TextView
            tools:text="30"
            style="@style/text96colorOrange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewTimeStudy"
            app:layout_constraintEnd_toEndOf="@+id/textView9"
            app:layout_constraintTop_toTopOf="@+id/textView9"
            android:fontFamily="@font/raleway_extrabold"/>
    <ImageView
            android:layout_width="274dp"
            android:layout_height="2dp" app:srcCompat="@drawable/divider_white"
            android:id="@+id/imageView21"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDataTime" android:layout_marginTop="16dp"/>
    <ImageView
            android:layout_width="274dp"
            android:layout_height="2dp" app:srcCompat="@drawable/divider_white"
            android:id="@+id/imageView22"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="56dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView21"/>
    <TextView
            android:text="@string/lessonEnd5"
            style="@style/text16colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:id="@+id/textViewTimeRemember" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView21" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/imageView22"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/roboto_bold"/>


    <ImageView
            android:rotation="45"
            android:layout_width="24dp"
            android:layout_height="24dp" app:srcCompat="@drawable/window_close_white"
            android:id="@+id/imageViewTimeRemember"
            app:layout_constraintBottom_toTopOf="@+id/imageView22"
            app:layout_constraintTop_toBottomOf="@+id/imageView21"
            app:layout_constraintStart_toStartOf="@+id/imageView21" android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/lessonEnd6"
            android:background="@color/colorOrange"
            style="@style/text14colorWhite"
            android:layout_width="216dp"
            android:layout_height="48dp"
            android:id="@+id/buttonNextLesson"
            app:layout_constraintEnd_toStartOf="@+id/buttonNextLesson2"
            app:layout_constraintBottom_toBottomOf="@+id/buttonNextLesson2" android:fontFamily="@font/roboto_medium"/>


    <ImageView
            android:elevation="4dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/arrow_right"
            android:id="@+id/imageViewF"
            app:layout_constraintEnd_toEndOf="@+id/buttonNextLesson2"
            app:layout_constraintStart_toStartOf="@+id/buttonNextLesson2"
            android:layout_marginStart="9dp"
            app:layout_constraintBottom_toBottomOf="@+id/buttonNextLesson2"
            app:layout_constraintTop_toTopOf="@+id/buttonNextLesson2"/>
    <Button
            android:background="@color/colorOrange"
            android:layout_width="78dp"
            android:layout_height="48dp"
            android:id="@+id/buttonNextLesson2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="60dp" app:layout_constraintTop_toBottomOf="@+id/textViewTimeStudy"/>
    <TextView
            tools:text="Now 12 fewralia))"
            style="@style/text16colorOrange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewDataTime" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/textView7"
            android:fontFamily="@font/roboto_medium"/>
    <TextView
            android:text="@string/lessonEnd17"
            style="@style/text16colorOrange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView19" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView22" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:fontFamily="@font/roboto_medium"/>
    <ImageView
            android:rotation="90"
            android:layout_width="60dp"
            android:layout_height="2dp" app:srcCompat="@drawable/divider_white"
            android:id="@+id/imageView18"
            app:layout_constraintEnd_toStartOf="@+id/textViewTimeStudy" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/textViewNumberWordStudy" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            app:layout_constraintBottom_toBottomOf="@+id/textViewTimeStudy" android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_rocket"
            android:id="@+id/imageView24"
            app:layout_constraintEnd_toStartOf="@+id/textView19" android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView19"/>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
