<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@color/colorTextMain">

    <ImageView
            android:elevation="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_girl_happy"
            android:id="@+id/imageView6"
            android:layout_marginStart="94dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="64dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonChoseTheme2"/>

    <Button
            android:text="@string/course2"
            android:background="@color/colorTextMain"
            style="@style/text14colorWhite"
            android:layout_width="216dp"
            android:layout_height="48dp"
            android:id="@+id/buttonChoseTheme2"
            app:layout_constraintEnd_toStartOf="@+id/buttonChoseTheme1"
            app:layout_constraintTop_toTopOf="@+id/buttonChoseTheme1" android:fontFamily="@font/roboto_medium"/>


    <ImageView
            android:elevation="4dp"
            android:rotation="180"
            android:layout_gravity="center"
            android:layout_width="48dp"
            android:layout_height="14dp" app:srcCompat="@drawable/arrow_long_new"
            android:id="@+id/imageView" app:layout_constraintEnd_toEndOf="@+id/buttonChoseTheme1"
            app:layout_constraintStart_toStartOf="@+id/buttonChoseTheme1" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/buttonChoseTheme1"
            app:layout_constraintBottom_toBottomOf="@+id/buttonChoseTheme1"/>
    <Button
            android:background="@color/colorTextMain"
            android:layout_width="78dp"
            android:layout_height="48dp"
            android:id="@+id/buttonChoseTheme1" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/imageView26" android:layout_marginBottom="3dp"/>


    <TextView
            tools:text="10"
            style="@style/text96colorOrange"
            android:layout_width="wrap_content"
            android:layout_height="108dp"
            android:id="@+id/textViewNumberwords"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/textView3"
            android:fontFamily="@font/raleway_extrabold"/>
    <TextView
            android:text="@string/course3"
            style="@style/text16colorOrange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textView12" android:fontFamily="@font/roboto_medium"/>
    <SeekBar
            android:rotation="270"
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:max="30"
            android:progress="1"
            style="@style/SeekBarColor"
            android:id="@+id/seekBar"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/imageView6"
            app:layout_constraintTop_toBottomOf="@+id/imageView25"
            app:layout_constraintBottom_toBottomOf="@+id/imageView26"/>
    <ImageView
            android:layout_width="48dp"
            android:layout_height="24dp" app:srcCompat="@drawable/arrow_long_new"
            android:id="@+id/imageViewBack"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/course20"
            style="@style/text14colorWhite"
            android:gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView12" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="@font/raleway"/>
    <ImageView
            android:layout_width="272dp"
            android:layout_height="2dp" app:srcCompat="@drawable/divider_white"
            android:id="@+id/imageView25"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginTop="8dp"/>
    <ImageView
            android:layout_width="272dp"
            android:layout_height="2dp" app:srcCompat="@drawable/divider_white"
            android:id="@+id/imageView26"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="55dp"/>
    <TextView
            android:text="@string/course21"
            style="@style/text14colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewNumberwords" android:fontFamily="@font/roboto"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
